# nile-client-rs

./: .env_example  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
.openapi-generator/: FILES
docs/: AccessApi.md  AccessTokenInfo.md  Action.md  AddOperation.md  AddOperationAllOf.md  AddUserToOrgRequest.md  AggregationRequest.md  Bucket.md  CopyOperation.md  CopyOperationAllOf.md  CreateAccessTokenRequest.md  CreateAccessTokenResponse.md  CreateDeveloperOwnedUserRequest.md  CreateEntityRequest.md  CreateOrganizationRequest.md  CreatePolicyRequest.md  CreateUserRequest.md  CreateWorkspaceRequest.md  DeveloperGoogleOAuthResponse.md  DevelopersApi.md  EntitiesApi.md  Entity.md  Error.md  Filter.md  Instance.md  InstanceEvent.md  Invite.md  ListMetricDefinitionsResponse.md  LoginInfo.md  Measurement.md  Metric.md  MetricDefinition.md  MetricsApi.md  MoveOperation.md  MoveOperationAllOf.md  OrgMembership.md  Organization.md  OrganizationsApi.md  PatchOperation.md  Policy.md  (+18 more)
openapi/: README.md
src/: lib.rs
src/apis/: access_api.rs  configuration.rs  developers_api.rs  entities_api.rs  metrics_api.rs  mod.rs  organizations_api.rs  users_api.rs  workspaces_api.rs
src/models/: access_token_info.rs  action.rs  add_operation.rs  add_operation_all_of.rs  add_user_to_org_request.rs  aggregation_request.rs  bucket.rs  copy_operation.rs  copy_operation_all_of.rs  create_access_token_request.rs  create_access_token_response.rs  create_developer_owned_user_request.rs  create_entity_request.rs  create_organization_request.rs  create_policy_request.rs  (+37 more)
