[package]
name = "nile-client-rs"
version = "0.1.0-alpha.1"
description = "A Rust client for the thenile.dev/"
documentation = "https://github.com/CoreDB-io/nile-client-rs"
edition = "2021"
homepage = "https://www.coredb.io"
keywords = ["thenile", "control-plane"]
license = "MIT"
readme = "README.md"
repo = "https://github.com/CoreDB-io/nile-client-rs"

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["full"] }
